# Scrapper-Fast

./: .env.example  .gitignore  Contact Scrapper App.cmd  Launch Scraper UI.cmd  README.md  launcher.pyw  pyproject.toml  requirements.txt  run_scraper.ps1  run_ui.ps1  setup.ps1
Deletable/tests/: test_crawler.py  test_extractors.py  test_runner.py  test_storage_export.py  test_utils.py  test_web_app.py  test_website_finder.py
contact_scraper/: __init__.py  accuracy.py  cli.py  config.py  crawler.py  exporters.py  extractors.py  fetchers.py  logging_utils.py  models.py  runner.py  storage.py  utils.py  web_app.py  website_finder.py
contact_scraper/static/: scraper.css  scraper.js
contact_scraper/templates/: scraper.html
