[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lightning-contact-scraper"
version = "1.0.0"
description = "High-throughput public website contact and social link scraper"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.10,<4",
  "beautifulsoup4>=4.12,<5",
  "flask>=3.1,<4",
  "lxml>=5,<7",
  "phonenumbers>=8.13,<10",
  "python-dotenv>=1,<2",
  "tldextract>=5,<6",
]

[project.optional-dependencies]
browser = ["playwright>=1.50,<2"]
google = ["gspread>=6,<7", "google-auth>=2,<3"]
dev = ["pytest>=8,<10", "pytest-asyncio>=0.24,<1"]

[project.scripts]
contact-scraper = "contact_scraper.cli:main"
contact-scraper-ui = "contact_scraper.web_app:main"

[tool.setuptools.packages.find]
include = ["contact_scraper*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
